# bio-patrol

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  common_types.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml
data/: kachaka_error_codes.csv
data/config/: beds.json  patrol.json  settings.json
deploy/: README.md  docker-compose.prod.yml
deploy/data/config/: beds.json  patrol.json  settings.json
docs/: BIO_SENSOR.md  DEPLOYMENT.md  GRPC_ERROR_FIX_SUMMARY.md  USERGUIDE.md  task_runtime_flow.md
docs/plans/: 2026-02-23-kachaka-core-integration-design.md  2026-02-23-kachaka-core-integration-plan.md
public/css/: style.css
public/js/: mockData.js
routers/: tasks.py
services/: bio_sensor_mqtt.py  fleet_api.py  robot_manager.py  scheduler.py  task_runtime.py
settings/: .env.example  config.py  defaults.py  patrol.json
src/backend/: common_types.py  dependencies.py  main.py
src/backend/routers/: bio_sensor.py  kachaka.py  settings.py  tasks.py
src/backend/services/: bio_sensor_mqtt.py  fleet_api.py  robot_manager.py  scheduler.py  task_runtime.py  telegram_service.py
src/backend/settings/: config.py  defaults.py
src/backend/utils/: generate_fake_sensor_data.py  json_io.py
src/frontend/: index.html
src/frontend/css/: style.css
src/frontend/js/: dataService.js  dynamicParams.js  mockData.js  script.js  script.sim.js
tests/: test_api.py  test_api_errors.py
utils/: generate_fake_sensor_data.py
