[project]
name = "bio-patrol"
version = "1.0.0"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "async-timeout==5.0.1",
"fastapi==0.115.6",
    "frozenlist==1.5.0",
    "grpcio==1.66.1",
    "grpcio-tools==1.65.2",
    "idna==3.7",
    "kachaka-api==3.10.6",
    "multidict==6.1.0",
    "paho-mqtt==2.1.0",
    "protobuf==5.27.2",
    "requests==2.32.3",
    "urllib3==2.2.2",
    "uvicorn==0.34.0",
    "yarl==1.18.3",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
